Fixed navbar horizontal scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,7 @@ nav {
   }
 
   .nav-links {
-    position: absolute;
+    position: fixed;
     right: 0px;
     height: 92vh;
     top: 8vh;
